--- a/resources/shared/listView-component/listview.component.html
+++ b/resources/shared/listView-component/listview.component.html
@@ -1,30 +1,33 @@
-<div class="row">
-    <div class="col-12 p-0">
-        <div class="reimbListTabl" id="reimbListTabl">
-            <h3 class="innerHeadText mt-2 mb-2 ml-2 d-inline-block">Registered Request</h3>
-            <table class="table">
-                <thead>
-                    <tr>
-                        <th ng-click="$ctrl.sortBy(header.fieldName)" ng-repeat="header in $ctrl.headers">
-                            {{header.label}}
-                            <span class="fa fa-sort" ng-show="$ctrl.fieldName == header.fieldName" ng-class="{'fa fa-sort-desc': $ctrl.reverse, 'fa fa-sort-asc' : !$ctrl.reverse}"></span>
-                        </th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr ng-repeat="request in $ctrl.requests | orderBy : $ctrl.fieldName : $ctrl.reverse">
-                        <td ng-repeat="header in $ctrl.headers">
-                            <span ng-if="!header.redirectable">{{request[header.fieldName]}}</span>
-                            <span ng-if="header.redirectable">
-                                <a href="javascript:void(0);" ng-click="$ctrl.navigateTo(request);">{{request[header.fieldName]}}</a>
-                            </span>
-                            <span ng-if="header.isDocument">
-                                <a style="float:left"class="oi" data-glyph="paperclip" href="resources/img/dis.png" download></a>
-                            </span>
-                        </td>
-                    </tr>
-                </tbody>
-            </table>
-        </div>
-    </div>
-</div>
+<table class="table">
+    <thead>
+        <tr>
+            <th ng-click="$ctrl.sortBy(header.fieldName)" ng-repeat="header in $ctrl.headers" class="{{header.class}}">
+                {{header.label}}
+                <span class="fa fa-sort" ng-show="$ctrl.fieldName == header.fieldName" ng-class="{'fa fa-sort-desc': $ctrl.reverse, 'fa fa-sort-asc' : !$ctrl.reverse}"></span>
+            </th>
+        </tr>
+    </thead>
+    <tbody>
+        <tr ng-repeat="request in $ctrl.requests | orderBy : $ctrl.fieldName : $ctrl.reverse">
+            <td ng-repeat="header in $ctrl.headers" class="{{header.class}}">
+                <span ng-if="!header.redirectable && header.fieldName != 'assigned'">
+                    <span ng-if="header.type == 'id'">#</span>
+                    {{request[header.fieldName]}}
+                </span>
+                <span ng-if="header.redirectable">
+                    <a href="javascript:void(0);" ng-click="$ctrl.navigateTo(request);">{{request[header.fieldName]}}</a>
+                </span>
+                <span ng-if="header.isDocument">
+                    <a style="float:left"class="oi" data-glyph="paperclip" href="resources/img/dis.png" download></a>
+                </span>
+                <span ng-if="header.fieldName == 'assigned'">
+                        <strong ng-class="{'text-success': request[header.fieldName] < 15,'text-danger': request[header.fieldName] > 14}" class="text-success">{{request[header.fieldName]}}</strong>
+                    </span>
+                <div ng-if="header.isCheckBox" class="custom-control custom-radio" ng-click="$ctrl.getSelectedData(request);">
+                    <input type="radio" name="customRadio" class="custom-control-input">
+                    <label class="custom-control-label"></label>
+                </div>
+            </td>
+        </tr>
+    </tbody>
+</table>
