--- a/resources/user-assignment/view/user-assignment.html
+++ b/resources/user-assignment/view/user-assignment.html
@@ -78,7 +78,7 @@
                             </md-not-found>
                         </md-autocomplete>
                     </div>
-                    <div class="searchColm align-middle text-center" ng-click="click();" style="width: 50% !important ;padding-top:10px;">
+                    <div class="searchColm align-middle text-center" ng-click="search();" style="width: 50% !important ;padding-top:10px;">
                         <a href="javascript:;" data-toggle="modal" data-target="#newRegClaims" class="searBtn mt-1 ml-3 mr-3 align-middle">
                             <span class="oi align-middle" data-glyph="magnifying-glass"></span>
                         </a>
@@ -142,9 +142,6 @@
                                                         </span>
                                                         <span class="d-inline-block pr-2"><strong>Member No: {{c.memberNo}}</strong></span>
                                                     </div>
-
-
-
                                                     <div class="text-nowrap">
                                                         <class="d-inline-block pr-2">Voucher No: {{c.voucherNo}}
                                                         <class="d-inline-block pr-2">Encounter Type: {{c.encounterType}}
@@ -183,8 +180,7 @@
                                                     </div>
                                                 </td>
                                                 <td class="align-middle text-center">
-                                                    <a href="javascript:;" class="custSelectBtn" ng-class="{custSelectBtnSected : c.selected}" aria-label="Select All" ng-click="c.selected = !c.selected; assignedtouser(c, $index);"><span class="oi align-middle" data-glyph="check"></span></a>
-
+                                                    <a href="javascript:;" class="custSelectBtn" ng-class="{custSelectBtnSected : c.selected}" aria-label="Select All" ng-click="c.selected = !c.selected; claimToAssign(c, $index);"><span class="oi align-middle" data-glyph="check"></span></a>
                                                 </td>
                                             </tr>
                                         </tbody>
@@ -194,47 +190,7 @@
                         </div>
                     </div>
                     <div class="col-3 innerRight">
-                         <h3 class="pt-3">Assign to user</h3>   
-                        <div class="row" style="padding:0 15px;">
-                            <span style="width:5%;padding: 7px 0;"><i class="oi align-middle" data-glyph="magnifying-glass"></i></span>
-                            <md-autocomplete style="width:92%" md-selected-item="selectedItem" md-search-text="userSearchText" md-selected-item-change="submit()" md-items="item in querySearch(userSearchText)" md-item-text="item.name" placeholder="UserName">
-                                <md-item-template>
-                                    <span md-highlight-text="userSearchText">{{item.name}}</span>
-                                </md-item-template>
-                                <md-not-found>
-                                    No Result Found
-                                    
-                                </md-not-found>
-                            </md-autocomplete>
-                        </div>
-                        <table class="table mt-3">
-                            <thead>
-                                <tr>
-                                    <th scope="col">User Id </th>
-                                    <th scope="col">Name</th>
-                                    <th class="text-center" scope="col">Assigned</th>
-                                    <th class="text-center" scope="col">Pending</th>
-                                    <th scope="col">&nbsp;</th>
-                                </tr>
-                            </thead>
-                            <tbody>
-                                <tr ng-repeat="u in users">
-                                    <td>#{{u.userId}}</td>
-                                    <td>{{u.name}}</td>
-                                    <td class="text-center"><strong ng-class="{'text-success': u.assigned < 15,'text-danger': u.assigned > 14}" class="text-success">{{u.assigned}}</strong></td>
-                                    <td class="text-center">{{u.pending}}</td>
-                                    <td class="text-center">
-                                        <div class="custom-control custom-radio" ng-click="selectedData(u)">
-                                            <input type="radio" name="customRadio" class="custom-control-input">
-                                            <label class="custom-control-label"></label>
-                                        </div>
-                                    </td>
-                                </tr>
-                            </tbody>
-                        </table>
-                        <div class="align-middle text-center float-right" ng-click="assignedData()">
-                            <a href="javascript:;" class="searBtn searBtnWithText"> Assign</a>
-                        </div>
+                        <user-assignment-component headers="userAssignmentHeader" users="users" selected-user="selectedUserToAssign" assigned-to-selected-user="assignedToSelectedUser()"></user-assignment-component>
                     </div>
                 </div>
             </div>
