Emirates Id Chnages..

--- a/resources/user-assignment/view/user-assignment.html
+++ b/resources/user-assignment/view/user-assignment.html
@@ -161,6 +161,7 @@
                                                     </div>
                                                 </td>
                                                 <td class="align-bottom">
+                                                    <div class="text-nowrap">Emirates ID :{{c.emiratesId}}</a></div>
                                                     <div class="text-nowrap">Document Link :<a href="">{{c.documentLink}}</a></div>
                                                     <div class="text-nowrap">Prev Request : {{c.prevRequest}}</div>
                                                 </td>
