--- a/resources/registration/view/registration-general.html
+++ b/resources/registration/view/registration-general.html
@@ -43,11 +43,17 @@
         <div class="resultBox mb-4" ng-class="{'mt-3' : isNew}">
             <div class="fldsWrap clearfix">
                 <div layout-gt-sm="row">
-                    <div class="col-sm-12">
+                    <div class="col-sm-6">
                         <md-input-container flex-gt-sm>    
                             <label>Member Name</label>
                             <input type="text" ng-model="regDetail.memberName"/>
                         </md-input-container>
+                    </div>
+                    <div class="col-sm-6 colborder">
+                            <md-input-container flex-gt-sm>    
+                                <label>Emirates ID</label>
+                                <input type="text" ng-model="regDetail.emiratesId"/>
+                            </md-input-container>
                     </div>
                 </div>    
             </div>
