--- a/resources/registration/view/registration.html
+++ b/resources/registration/view/registration.html
@@ -7,7 +7,7 @@
         <div class="contentPart">
             <div class="container-fluid">
                 <div class="row">
-                    <div class="col-10 p-0">
+                    <div class="col-11 p-0">
                         <div class="searchBarRow reimbListTabl" style="display: block">
                             <div layout-gt-sm="row">
                                 <div style="border-left: 1px solid #e6e6e6;width: 90% !important;position: relative;"> 
@@ -20,7 +20,7 @@
                                         md-search-text="memNosearchText"
                                         md-items="item in querySearch(memNosearchText, 'memberNumber')"
                                         md-item-text="item.memberNumber"                                    
-                                        md-floating-label="Member Card Number"
+                                        md-floating-label=" Card Number"
                                         md-clear-button="true">
                                         <md-item-template>
                                             <span md-highlight-text="memNosearchText">{{item.memberNumber}}</span>
@@ -52,8 +52,8 @@
                                 </div>
                                 <div style="border-left: 1px solid #e6e6e6;width: 90% !important;">
                                     <md-input-container flex-gt-sm>
-                                        <label>IBAN Number</label>
-                                        <input ng-model="ibanNum">
+                                        <label>Emirates Id</label>
+                                        <input ng-model="emiratesId">
                                     </md-input-container>
                                 </div>
                                 <div style="border-left: 1px solid #e6e6e6;width: 90% !important;">
@@ -82,20 +82,19 @@
                                     </md-autocomplete>
                                     
                                 </div>
-                                <div class="searchat searchColm align-middle text-center">
-                                    <a ng-click="searchBtn()" href="javascript:;" class="searBtn mt-1 ml-3 mr-3 align-middle">
-                                        <span class="oi align-middle" data-glyph="magnifying-glass"></span>
-                                    </a>
-                                    <a ng-click="clear()" href="javascript:;" class="searBtn mt-1 ml-3 mr-3 align-middle">
-                                        <span class="oi align-middle" data-glyph="x"></span>
-                                    </a>
-                                    <!-- <a ng-click="clear()" href="javascript:;" class="searBtn searBtnWithText mt-3 align-middle" data-glyph="x"></a> -->
-                                </div>
+                                <div class="searchColm align-middle text-center" style="width: 90% !important">
+                                        <a ng-click="searchBtn()" href="javascript:;" class="searBtn searBtnWithText mt-3 ml-3 mr-3 align-middle">
+                                            <span class="oi align-middle" data-glyph="magnifying-glass"></span> Search
+                                        </a>
+                                        <a ng-click="clear()" href="javascript:;" class="searBtn searBtnWithText mt-3 ml-3 mr-3 align-middle">
+                                                Clear
+                                        </a>
+                                  </div>
                             </div>
                         </div>
                     </div>
-                    <div class="col-2 p-0">
-                        <a href="javascript:;" class="btn btn-primary createNewBtn float-right mt-3 ml-4" ui-sref="claim-registration-new">Register New Claim</a>
+                    <div class="col-1 p-0">
+                        <a href="javascript:;" class="btn btn-primary createNewBtn float-right mt-3 ml-4" ui-sref="claim-registration-new">Register</a>
                     </div>
                 </div>
             </div>
@@ -110,16 +109,19 @@
                             <table class="table">
                                 <thead>
                                     <tr>
-                                        <th ng-click="sortBy('memberNumber')">Member Card Number
+                                        <th ng-click="sortBy('memberNumber')">Card Number
                                             <span class="fa fa-sort" ng-show="propertyName == 'memberNumber'"ng-class="{'fa fa-sort-desc': reverse,'fa fa-sort-asc' : !reverse}"></span>
                                         </th>
                                         <th ng-click="sortBy('memberName')">Member Name
                                             <span class="fa fa-sort" ng-show="propertyName == 'memberName'"ng-class="{'fa fa-sort-desc': reverse, 'fa fa-sort-asc': !reverse}"></span>
                                         </th>
-                                        <th ng-click="sortBy('policyNumber')">Policy Number
+                                        <th ng-click="sortBy('policyNumber')">Emirates Id
                                             <span class="fa fa-sort" ng-show="propertyName == 'policyNumber'"ng-class="{'fa fa-sort-desc': reverse, 'fa fa-sort-asc': !reverse}"></span>
                                         </th>
                                         <th ng-click="sortBy('voucherNumber')">Voucher Number
+                                            <span class="fa fa-sort" ng-show="propertyName == 'voucherNumber'"ng-class="{'fa fa-sort-desc': reverse, 'fa fa-sort-asc' : !reverse}"></span>
+                                        </th>
+                                        <th ng-click="sortBy('emiratesId')">Policy Number
                                             <span class="fa fa-sort" ng-show="propertyName == 'voucherNumber'"ng-class="{'fa fa-sort-desc': reverse, 'fa fa-sort-asc' : !reverse}"></span>
                                         </th>
                                         <th ng-click="sortBy('ibanNum')">IBAN Number
@@ -132,16 +134,18 @@
                                     <tr ng-repeat="claim in claims | orderBy:propertyName:reverse">
                                         <td><a href="javascript:void(0);" ng-click="editClaim(claim);">{{claim.memberNumber}}</a></td>
                                         <td>{{claim.memberName}}</td>
-                                        <td>{{claim.policyNumber}}</td>
+                                        <td>{{claim.emiratesId}}</td>
                                         <td>{{claim.voucherNumber}}</td>
+                                        <td>{{claim.policyNumber}}</td>
                                         <td>{{claim.ibanNum}}</td>
                                         <td class="text-center" >
-                                            <a style="float:left"class="oi" data-glyph="paperclip" href="resources/img/dis.png" download></a>
-                                        </td>
+                                            <!-- <a style="float:left"class="oi" data-glyph="paperclip" href="resources/img/dis.png" download></a> -->
+                                            <a style="float:left" class="fa fa-file-pdf-o" style="font-size:68px" href="resources/img/dis.png" download></a>
+                                       </td>
                                     </tr>
                                 </tbody> 
                             </table>
-                            <div ng-if="claimTreatMent.length === 0" style="padding:10px"> <p><font size="3"><center>NO ITEMS FOUND</center></font></p></div>    
+                            <div ng-if="claims.length === 0" style="padding:10px"> <p><font size="3"><center>NO ITEMS FOUND</center></font></p></div>    
                         </div>
                     </div>
                 </div>
