listview component changes

--- a/resources/user-assignment/view/user-assignment.html
+++ b/resources/user-assignment/view/user-assignment.html
@@ -96,97 +96,7 @@
                 <div class="row">
                     <div class="col-9">
                         <div class="tabOuter">
-                            <ul class="nav nav-tabs row" id="resultTab" role="tablist">
-                                <li class="nav-item col-2 pointer" ng-class="{'active show' : tab == 'newRequest'}" ng-click="tab='newRequest';changeTab()">
-                                    <a class="nav-link " id="NewRequest" data-toggle="tab" role="tab" aria-controls="NewRequest" aria-selected="true">New Request <span class="resultCount">{{claim.length}}</span></a>
-                                </li>
-                                <li class="nav-item col-2 pointer" ng-class="{'active show' :tab == 'InProgress'}" ng-click="tab='InProgress';changeTab()">
-                                    <a class="nav-link" id="InProgress" data-toggle="tab" role="tab" aria-controls="InProgress" aria-selected="false">In Progress <span class="resultCount">{{inProgress.length}}</span></a>
-                                </li>
-                                <li class="nav-item col-2 pointer" ng-class="{'active show' : tab == 'Approved'}" ng-click="tab='Approved';changeTab()">
-                                    <a class="nav-link" id="Approved" data-toggle="tab" role="tab" aria-controls="Approved" aria-selected="false">Approved <span class="resultCount">{{approved.length}}</span></a>
-                                </li>
-                                <li class="nav-item col-2 pointer" ng-class="{'active show' : tab == 'Waitingforapproval'}" ng-click="tab='Waitingforapproval';changeTab()">
-                                    <a class="nav-link" id="Waitingforapproval" data-toggle="tab" role="tab" aria-controls="Waitingforapproval" aria-selected="false">Waiting for approval <span class="resultCount">{{waitingforapproval.length}}</span></a>
-                                </li>
-                                <li class="nav-item col-2 pointer" ng-class="{'active show' : tab == 'Rejected'}" ng-click="tab='Rejected';changeTab()">
-                                    <a class="nav-link" id="Rejected" data-toggle="tab" role="tab" aria-controls="Rejected" aria-selected="false">Rejected <span class="resultCount">{{rejected.length}}</span></a>
-                                </li>
-                                <li class="nav-item col-2 pointer" ng-class="{'active show' : tab == 'Assigned'}" ng-click="tab='Assigned';changeTab()">
-                                    <a class="nav-link" id="Assigned" data-toggle="tab" role="tab" aria-controls="Assigned" aria-selected="false">Assigned <span class="resultCount">{{assigned.length}}</span></a>
-                                </li>
-                            </ul>
-                            <div class="tab-content " id="resultTabContent">
-                                <div class="tab-pane fade active show" ng-class="{ 'active show' : tab == 'NewRequestCount','': tab != 'NewRequestCount'}" id="NewRequest" role="tabpanel" aria-labelledby="NewRequest">
-                                    <div class="row">
-                                        <div class="col-sm-11">
-                                            <div class="text-right">
-                                                <font size="2">Sort :</font>
-                                                    <select class="custom-select innerFilterSortBy" ng-change="sorting(option)" ng-model="option">
-                                                        <option value="receivedDateDesc">By Date Asc</option>
-                                                         <option value="receivedDate">By Date Desc</option>
-                                                    </select>
-                                            </div>
-                                        </div>
-                                        <div class="col-sm-1">
-                                            <div ng-click="selectAll()" class="align-middle selectline"><a href="javascript:;" id="seltAll" style="font-size:75%;">{{selectall ? 'De-SelectAll' : 'Select All'}}</a></div>
-                                        </div>
-                                    </div>
-                                    <table class="table">
-                                        <tbody>
-                                            <tr ng-repeat="c in claimList | orderBy:orderByField:reverseSort">
-                                                <td>
-                                                    <div class="text-nowrap">
-                                                        <span class="d-inline-block pr-2"><strong>Claim No: </strong>
-                                                            <a class="currencyTypeCustom" href="javascript:void(0);"ng-click="navigateTo();">#{{c.climeNo}}</a>
-                                                        </span>
-                                                        <span class="d-inline-block pr-2"><strong>Member No: {{c.memberNo}}</strong></span>
-                                                    </div>
-                                                    <div class="text-nowrap">
-                                                        <class="d-inline-block pr-2">Voucher No: {{c.voucherNo}}
-                                                        <class="d-inline-block pr-2">Encounter Type: {{c.encounterType}}
-                                                    </div>
-                                                    <!-- <div class="text-nowrap">
-                                                        <class="d-inline-block pr-2">Document Link: <a href="">{{c.documentLink}}</a>
-                                                    </div>   -->
-                                                    <div class="text-nowrap">
-                                                        <div class="receiveInfo d-inline-block pr-3"><span class="oi" data-glyph="timer"></span> Request recieved on: {{c.requestRecievedOn}}</div>
-                                                        <div class="statusInfo d-inline-block text-success" ng-class="{'text-success': c.status=='Approved','text-danger': c.status!='Approved'}">
-                                                            <span ng-if="c.status=='Approved'" class="oi" data-glyph="thumb-up"></span>
-                                                            <span ng-if="c.status!='Approved'" class="oi" data-glyph="thumb-down"></span> &nbsp;{{c.status}}
-                                                        </div>
-                                                    </div>
-                                                </td>
-                                                <td class="align-bottom">
-                                                    <div class="text-nowrap">Document Link :<a href="">{{c.documentLink}}</a></div>
-                                                    <div class="text-nowrap">Prev Request : {{c.prevRequest}}</div>
-                                                </td>
-                                                <td>
-                                                    <div class="text-nowrap">
-                                                        <span class="tablLal">Pay Mode:</span><span class="tablCont">{{c.payMode}}</span>
-                                                    </div>
-                                                    <div class="text-nowrap">
-                                                        <span class="tablLal">Pay Date:</span><span class="tablCont">{{c.payDate}}</span>
-                                                    </div>
-                                                    <div class="text-nowrap">
-                                                        <span class="tablLal">Pay Ref No:</span><span class="tablCont">{{c.payRefNo}}</span>
-                                                    </div>
-                                                </td>
-                                                <td class="text-right">
-                                                    <div class="text-nowrap">
-                                                        Requested Amount
-                                                        <h4>{{c.currencyCode}} {{c.requestedAmount}}</h4>
-                                                        Approved Amount: {{c.currencyCode}} {{c.approvedAmount}}
-                                                    </div>
-                                                </td>
-                                                <td class="align-middle text-center">
-                                                    <a href="javascript:;" class="custSelectBtn" ng-class="{custSelectBtnSected : c.selected}" aria-label="Select All" ng-click="c.selected = !c.selected; claimToAssign(c, $index);"><span class="oi align-middle" data-glyph="check"></span></a>
-                                                </td>
-                                            </tr>
-                                        </tbody>
-                                    </table>
-                                </div>
-                            </div>
+                            <claims-list-view-component all-claim-records="claimList" claims-records="claimList" statuslist="statusList" selected-claims="claimsToAssign"></claims-list-view-component>
                         </div>
                     </div>
                     <div class="col-3 innerRight">
