--- a/resources/user-assignment/view/user-assignment.html
+++ b/resources/user-assignment/view/user-assignment.html
@@ -96,7 +96,7 @@
                 <div class="row">
                     <div class="col-9">
                         <div class="tabOuter">
-                            <claims-list-view-component all-claim-records="claimList" claims-records="claimList" statuslist="statusList" selected-claims="claimsToAssign"></claims-list-view-component>
+                            <claims-list-view-component all-claim-records="claimList" claims-records="claimList" statuslist="statusList" selected-claims="claimsToAssign" navigate-to="{{selectedClaim == 'eclaims' ? 'eclaim' : 'reimbursement-processing'}}"></claims-list-view-component>
                         </div>
                     </div>
                     <div class="col-3 innerRight">
