--- a/resources/eclaim/view/eclaim-processing.html
+++ b/resources/eclaim/view/eclaim-processing.html
@@ -320,44 +320,8 @@
                         </div>                    
                     </div> -->
                 </div>
-                <div class="eclaimRequest text-center mt-4">
-                    <div class="clearfix">
-                        <!-- <a href="javascript:;" class="custCheckboxBtn float-left" ng-class="{'custCheckboxBtnSected' : isChecked}" ng-click="toggleSelect();" style="margin: 15px 9px 0px 6px !important;">
-                            <span class="oi" data-glyph="check"></span>
-                        </a> -->
-                        <div class="btn-group btn-group-sm claimStatusBtns mt-2 mb-2 float-left" role="group" aria-label="Basic example">
-                            <button type="button" class="btn btn-secondary">
-                                <a href="javascript:;" class="custCheckboxBtn float-left" ng-class="{'custCheckboxBtnSected' : isChecked}" ng-click="toggleSelect();">
-                                    <span class="oi" data-glyph="check"></span>
-                                </a>
-                            </button>
-                            <button type="button" class="btn btn-secondary">
-                                <span class="oi" data-glyph="check"></span>
-                            </button>
-                            <button type="button" class="btn btn-secondary">
-                                <span class="oi" data-glyph="thumb-up"></span>
-                            </button>
-                            <button type="button" class="btn btn-secondary">
-                                <span class="oi" data-glyph="thumb-down"></span>
-                            </button>                            
-                        </div>
-                        <h3 class="innerHeadText mt-2 mb-2 d-inline-block">Claim Treatment / Service Level</h3><div class="currencyType d-inline-block">Currency: AED</div>
-                        <a href="javascript:;" class="tablColmArrow float-right mt-2 mb-2 mr-3 ml-2" ng-click="addRow();">
-                            <span class="oi" data-glyph="plus"></span>
-                        </a>
-                        <a href="javascript:;" class="tablColmArrow float-right mt-2 mb-2 mr-3 ml-2" id="right-button">
-                            <span class="oi" data-glyph="chevron-right"></span>
-                        </a>
-                        <a href="javascript:;" class="tablColmArrow float-right mt-2 mb-2 ml-2" id="left-button">
-                            <span class="oi" data-glyph="chevron-left"></span>
-                        </a>
-                    </div>
-                    <div class="table eclaimRequestTabl">
-                        <div ui-grid="gridOptions" ui-grid-pinning="" ui-grid-edit="" class="eclaimRequestTabl"></div>
-                    </div>
-                </div>
+                <grid-wrapper ui-Grid-Options="gridOptions" inline-Edit="isInlineEdit" module="moduleName" on-Grid-Action="gridAction(info)"></grid-wrapper>
             </div>
-        
         </div>
         
         <footer class="clearfix">
